dev/manifests/cluster-config/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "logistis.acme.com"
webhooks:
  - name: "logistis.acme.com"
    failurePolicy: Ignore
    rules:
      - apiGroups: ["", "apps"]
        apiVersions: ["v1"]
        operations: ["*"]
        resources: ["deployments", "statefulsets", "configmaps", "secrets"]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: logistis
        path: /
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN2RENDQWFRQ0NRQytDYVQ5MEdyZ0JqQU5CZ2txaGtpRzl3MEJBUXNGQURBZ01Rc3dDUVlEVlFRR0V3SkIKVlRFUk1BOEdBMVVFQXd3SWJHOW5hWE4wYVhNd0hoY05Nakl3T0RFMk1EVXlPRFF6V2hjTk1qTXdPREUyTURVeQpPRFF6V2pBZ01Rc3dDUVlEVlFRR0V3SkJWVEVSTUE4R0ExVUVBd3dJYkc5bmFYTjBhWE13Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNxZldKZGdHcGJpQ1ZGZ0NreGdTYm1KcFZoUUJER2IycUUKcG1OQlNXd1d4ZHpmNEVIWXB3Y2ZzWm4vZllkYU1hM0ZGNWdubXF4UmJnQVN0QVYvSU9yMFRiVXp4MVc3WGhJMgprZkVneGUwaFda [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
